syntax = "proto3";

import "scalapb/scalapb.proto";
import "user.proto";

option (scalapb.options) = {
  scope: FILE
  package_name: "its.usrDir.commands"
  flat_package: true
  single_file: false
  lenses: true
  import: "itc.usrDir._"
  retain_source_code_info: false
};

message GetList {
    int32 sP = 1;
    int32 num = 2;
}

message AddUser {
    User user = 1;
}

message CheckKey {
    string uId = 1 [(scalapb.field).type = "itc.usrDir.ElementId"]; // User ID
    string key = 2;
}
